@@ -1,4 +1,7 @@
+29.oct (ws)
+      - fix #6317: ledger lines not long enough for whole notes
 28.oct (ws)
+      - add tempo selection to new score wizard
       - fix tempo changes (worked only after reloading score), now also works
         with undo/redo
       - initial implementation of textframe object
